--- a/prj-4/src/containers/header/header.css
+++ b/prj-4/src/containers/header/header.css
@@ -65,17 +65,75 @@
     color: var(--color-text);
     outline: none;
     color: #fff;
-    
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .gpt3__header-content__input button {
-    position: absolute;
-    width: 174px;
-    height: 73px;
-    left: 768px;
-    top: 624px;
-
-    background: #FF4820;
+    flex: 0.6;
+    width: 100%;
+    min-height: 50px;
+    font-family: var(--font-family);
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 27px;
+    background: #ff4820;
     border-radius: 5px 0px 0px 5px;
-    transform: matrix(-1, 0, 0, 1, 0, 0);
+    color: #fff;
+    cursor: pointer;
+    outline: none;
+    padding: 0 1rem;
+    border: none;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+
+}
+
+
+.gpt3__header-content__people {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
+    margin-top: 2rem;
+
+}
+
+.gpt3__header-content__people img {
+    width: 181.79px;
+    height: 39px;
+}
+
+.gpt3__header-content__people p {
+    font-family: var(--font-family);
+    margin: 0 0 0 1rem;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 38px;
+    color: #FFFFFF;
+    text-align: center;
+
+}
+
+.gpt3__header-image {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.gpt3__header-image img {
+    width: 100%;
+    height: 100%;
+}
+
+@media screen and (max-width: 1050px) {
+    .gpt3__header{
+        flex-direction: column;
+    }
+    .gpt3__header-content {
+        margin: 0 0 3rem;
+    }
 }
